simple layout 설정

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,55 @@
 
-.app {
+.header {
+    display: flex;
+    height: 10vh;
+    width: 100vw;
+    align-items: center;
+    border: solid 1px black;
+}
+
+.logo {
+    margin: 1rem;
 
 }
 
+.item-group {
+    display: flex;
+}
 
+.item  {
+    margin: 1rem;
+}
+
+.search-group {
+    display: flex;
+    align-items: center;
+    margin-left: auto;
+}
+
+.search {
+    margin: 1rem;
+}
+
+@media (max-width:768px) {
+
+    .header {
+        display: flex;
+        height: 15vh;
+        width: 100vw;
+        align-items: center;
+        border: solid 1px black;
+    }
+
+    .logo {
+        font-size : 2rem;
+        margin : auto;
+    }
+
+    .item-group {
+        display: none;
+    }
+
+    .search-group {
+        display : none;
+    }
+}
